# acg

./: .gitignore  acg.opam  dune-project  flake.nix
acg/lib/: dune
src/: acg.ml  acg.mli  datalog_reduction.ml  dune  lambda_calc.ml  lambda_calc.mli  lambda_calc_extension.ml  main.ml
src/acg/: acg_module.ml  dune  test_acg.ml
src/datalog_reduction/: datalog_reduction_module.ml  dune  test_datalog_reduction.ml
src/lambda_calc/: dune  lambda_calc.ml  lambda_calc_module.ml  lambda_calc_test.ml  test_lambda_calc.ml
src/lambda_calc_extension/: dune  lambda_calc_extension_module.ml
test/: acg.ml  dune  lambda_calc.ml
