(lang dune 3.6)

(name acg)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Tanguy Bozec")

(maintainers "Tanguy Bozec")

(license LICENSE)

(documentation TODO)

(package
 (name acg)
 (synopsis "an implementation of abstract categorial grammars")
 (description "a side project to learn about acgs")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
