(library
 (public_name acg.lambda_calc)
 (modules lambda_calc)
 (name lambda_calc)
 (libraries acg.lambda_calc_private))

(library
 (public_name acg.lambda_calc_extension)
 (modules lambda_calc_extension)
 (name lambda_calc_extension)
 (libraries acg.lambda_calc_extension_private))

(library
 (public_name acg.datalog_reduction)
 (modules datalog_reduction)
 (name datalog_reduction)
 (libraries acg.datalog_reduction_private))

(executable
 (public_name main)
 (name main)
 (libraries acg.lambda_calc)
 (modules main))

